--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -13,7 +13,6 @@ ed25519-dalek = "1.0"
 eyre = "0.6"
 futures = "0.3"
 hex = "0.4"
-gossipnet = { git = "https://github.com/astriaorg/gossipnet", features = [ "mdns" ], rev = "e916e4b0d4a0caa6fea68f721d4a4a8660a46af6" }
 prost = "0.11"
 rand = { version = "0.7", features = [ "getrandom" ] }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
@@ -28,13 +27,9 @@ axum = "0.6.16"
 http = "0.2.9"
 tokio = { version = "1.24", features = [ "macros", "rt-multi-thread" ] }
 
+astria-gossipnet = { path = "../astria-gossipnet", features = [ "mdns" ] }
 astria-sequencer-relayer-proto = { path = "../astria-sequencer-relayer-proto" }
-
-[dependencies.rs-cnc]
-git = "https://github.com/astriaorg/rs-cnc.git"
-rev = "07d00be"
-default-features = false
-features = ["rustls"]
+astria-rs-cnc = { path = "../astria-rs-cnc", default-features = false, features = ["rustls"] }
 
 [dev-dependencies]
 astria-sequencer-relayer-test = { path = "../astria-sequencer-relayer-test"}
