--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -10,6 +10,8 @@ color-eyre = "0.6.2"
 futures = "0.3"
 penumbra-component = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "9f33f728dab2312a92c619864a1be97fb81882d9" }
 penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "9f33f728dab2312a92c619864a1be97fb81882d9" }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 tendermint-proto = "0.29"
 tendermint = "0.29"
 tokio = { version = "1.28", features = [ "tracing" ] }
