--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -28,7 +28,7 @@ http = "0.2.9"
 tokio = { version = "1.24", features = [ "macros", "rt-multi-thread" ] }
 
 astria-gossipnet = { path = "../astria-gossipnet", features = [ "mdns" ] }
-astria-sequencer-relayer-proto = { path = "../astria-sequencer-relayer-proto" }
+astria-proto = { path = "../astria-proto" }
 astria-rs-cnc = { path = "../astria-rs-cnc" }
 
 [dev-dependencies]
