--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -29,7 +29,7 @@ tokio = { version = "1.24", features = [ "macros", "rt-multi-thread" ] }
 
 astria-gossipnet = { path = "../astria-gossipnet", features = [ "mdns" ] }
 astria-sequencer-relayer-proto = { path = "../astria-sequencer-relayer-proto" }
-astria-rs-cnc = { path = "../astria-rs-cnc", default-features = false, features = ["rustls"] }
+astria-rs-cnc = { path = "../astria-rs-cnc" }
 
 [dev-dependencies]
 astria-sequencer-relayer-test = { path = "../astria-sequencer-relayer-test"}
