--- a/crates/astria-sequencer-relayer-test/Cargo.toml
+++ b/crates/astria-sequencer-relayer-test/Cargo.toml
@@ -6,19 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eyre = "0.6"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-
-uuid = { version = "1.3.1", features = ["v4"] }
-once_cell = "1.17.1"
-k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
-kube = { version = "0.82.2", default-features = false, features = ["client", "runtime", "rustls-tls"] }
-tokio = { version = "1.24", features = [ "macros", "sync", "time" ] }
-serde_yaml = "0.9.21"
-minijinja = "0.32.1"
-reqwest = { version = "0.11.17", default-features = false, features = [ "rustls-tls" ] }
+eyre = { workspace = true }
+k8s-openapi = { workspace = true }
+kube = { workspace = true, features = ["client", "runtime"] }
+minijinja = { workspace = true }
+once_cell = { workspace = true }
+reqwest = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+serde_yaml = { workspace = true }
+tokio = { workspace = true, features = [ "macros", "sync", "time" ] }
+uuid = { workspace = true, features = ["v4"] }
 
 [dev-dependencies]
-tempfile = "3.5.0"
-which = "4.4.0"
+tempfile = { workspace = true }
+which = { workspace = true }
