--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -6,26 +6,27 @@ license = "MIT OR Apache-2.0"
 rust-version = "1.65"
 
 [dependencies]
-base64 = "0.21"
-bech32 = "0.9"
-dirs = "5.0"
-ed25519-dalek = "1.0"
-eyre = "0.6"
-futures = "0.3"
-hex = "0.4"
-prost = "0.11"
-rand = { version = "0.7", features = [ "getrandom" ] }
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-sha2 = "0.10"
-tendermint = "0.30"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
-clap = { version = "4.1.9", features = ["derive"] }
 axum = "0.6.16"
+dirs = "5.0"
 http = "0.2.9"
-tokio = { version = "1.24", features = [ "macros", "rt-multi-thread" ] }
+sha2 = "0.10"
+
+base64 = { workspace = true }
+bech32 = { workspace = true }
+ed25519-dalek = { workspace = true }
+eyre = { workspace = true }
+futures = { workspace = true }
+hex = { workspace = true }
+prost = { workspace = true }
+rand = { workspace = true, features = [ "getrandom" ] }
+reqwest = { workspace = true, features = ["json"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+tendermint = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
+clap = { workspace = true, features = ["derive"] }
+tokio = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
 
 astria-gossipnet = { path = "../astria-gossipnet", features = [ "mdns" ] }
 astria-proto = { path = "../astria-proto" }
