--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -18,7 +18,7 @@ tendermint-proto = "0.29"
 tendermint = "0.29"
 tokio = { version = "1.28", features = [ "tracing" ] }
 tower = "0.4"
-tower-abci = { git = "https://github.com/penumbra-zone/tower-abci.git", tag = "v0.5.0" }
+tower-abci = "0.5.0"
 tower-actor = "0.1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
