--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -22,15 +22,16 @@ reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tendermint = { workspace = true }
+tendermint-proto = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 clap = { workspace = true, features = ["derive"] }
-tokio = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 
-astria-gossipnet = { path = "../astria-gossipnet", features = [ "mdns" ] }
+astria-gossipnet = { path = "../astria-gossipnet", features = ["mdns"] }
 astria-proto = { path = "../astria-proto" }
 astria-rs-cnc = { path = "../astria-rs-cnc" }
 
 [dev-dependencies]
-astria-sequencer-relayer-test = { path = "../astria-sequencer-relayer-test"}
-rand = { workspace = true, features = [ "getrandom" ] }
+astria-sequencer-relayer-test = { path = "../astria-sequencer-relayer-test" }
+rand = { workspace = true, features = ["getrandom"] }
