--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -15,6 +15,7 @@ tendermint = "0.29"
 tower = "0.4"
 tower-abci = "0.5.0"
 tower-actor = "0.1.0"
+tokio-util = "0.7.8"
 
 color-eyre = { workspace = true }
 futures = { workspace = true }
@@ -24,3 +25,6 @@ serde_json = { workspace = true }
 tokio = { workspace = true, features = [ "tracing" ] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }
+
+[dev-dependencies]
+prost = { workspace = true }
