--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -10,8 +10,9 @@ bytes = "1.4"
 is-terminal = "0.4.7"
 penumbra-component = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.52.2" }
 penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.52.2" }
+tendermint-abci = { version = "0.29", features = ["client"] }
 tendermint-proto = "0.29"
-tendermint = "0.29"
+tendermint = { version = "0.29" }
 tower = "0.4"
 tower-abci = "0.5.0"
 tower-actor = "0.1.0"
