--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 async-trait = "0.1.52"
-bytes = "1.4"
 is-terminal = "0.4.7"
 penumbra-component = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.53.1" }
 penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.53.1" }
@@ -16,6 +15,7 @@ tower = "0.4"
 tower-abci = "0.7.0"
 tower-actor = "0.1.0"
 
+bytes = { workspace = true }
 color-eyre = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
