--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
+borsh = "0.11"
 is-terminal = "0.4.7"
 penumbra-component = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.53.1" }
 penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.53.1" }
