--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -17,10 +17,12 @@ tower-actor = "0.1.0"
 
 async-trait = { workspace = true }
 bytes = { workspace = true }
+ed25519-dalek = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
 serde = { workspace = true, features = ["derive"]  }
 serde_json = { workspace = true }
+sha2 = { workspace = true }
 tokio = { workspace = true, features = [ "tracing" ] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }
