--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -24,3 +24,4 @@ serde_json = { workspace = true }
 tokio = { workspace = true, features = [ "tracing" ] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }
+sha2.workspace = true
