--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+astria-tracing-tower = { path = "../astria-tracing-tower" }
+
 anyhow = "1"
 borsh = "0.11"
 is-terminal = "0.4.7"
