--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -4,13 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-astria-tracing-tower = { path = "../astria-tracing-tower" }
-
 anyhow = "1"
 borsh = "0.11"
 is-terminal = "0.4.7"
 penumbra-component = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.53.1" }
 penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.53.1" }
+penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.53.1" }
 tendermint-proto = "0.31"
 tendermint = "0.31"
 tower = "0.4"
