--- a/crates/astria-sequencer-relayer/Dockerfile
+++ b/crates/astria-sequencer-relayer/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
     libprotobuf-dev \
     protobuf-compiler \
+    clang \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
