use penumbra commit w tower-tracing fix

--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 anyhow = "1"
 borsh = "0.10.3"
 is-terminal = "0.4.7"
-penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.54.1" }
-penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.54.1" }
+# commit builds off v0.54.1
+penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "d8d5cd0b00876380147d7ddc7f3005178e3d9ae0" }
+penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "d8d5cd0b00876380147d7ddc7f3005178e3d9ae0" }
 tower = "0.4"
 tower-abci = "0.8.0"
 tower-actor = "0.1.0"
