test genesis data moved from json to csv. basic info! logging added

--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -13,6 +13,7 @@ penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", 
 tower = "0.4"
 tower-abci = "0.8.0"
 tower-actor = "0.1.0"
+csv = "1.1.6"
 
 async-trait = { workspace = true }
 bytes = { workspace = true }
