--- a/crates/astria-sequencer-client/Cargo.toml
+++ b/crates/astria-sequencer-client/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 astria-sequencer = { path = "../astria-sequencer" }
 
 borsh = "0.10.3"
+tendermint-rpc = { version = "0.32", features = ["http-client"]}
 
+ed25519-consensus = { workspace = true }
 eyre = { workspace = true }
 hex = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+tendermint = { workspace = true }
 tokio = { workspace = true }
