--- a/crates/astria-sequencer-client/Cargo.toml
+++ b/crates/astria-sequencer-client/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2021"
 [dependencies]
 astria-sequencer = { path = "../astria-sequencer" }
 
-tendermint-rpc = { version = "0.32", features = ["http-client"]}
-
 borsh = { workspace = true }
 ed25519-consensus = { workspace = true }
 eyre = { workspace = true }
+reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tendermint = { workspace = true }
+tendermint-rpc = { workspace = true, features = ["http-client"]}
 tokio = { workspace = true }
 
 [dev-dependencies]
