--- a/crates/astria-sequencer-relayer-test/kubernetes/service.yml
+++ b/crates/astria-sequencer-relayer-test/kubernetes/service.yml
@@ -9,6 +9,9 @@ spec:
     - name: sequencer-svc
       port: 1318
       targetPort: sequencer-svc
-    - name: bridge-svc
+    - name: bridge-rest
       port: 26659
-      targetPort: bridge-svc
+      targetPort: bridge-rest
+    - name: bridge-jsonrpc
+      port: 26658
+      targetPort: bridge-jsonrpc
