--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -28,15 +28,17 @@ tokio = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
 
 astria-gossipnet = { path = "../astria-gossipnet" }
 astria-proto = { path = "../astria-proto" }
-astria-rs-cnc = { path = "../astria-rs-cnc" }
+astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client" }
 base64-serde = "0.7.0"
 zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
 tendermint-config.workspace = true
 ed25519-consensus = { workspace = true }
 subtle-encoding = "0.5.1"
+serde_path_to_error = "0.1.13"
 
 [dev-dependencies]
 astria-sequencer-relayer-test = { path = "../astria-sequencer-relayer-test"}
+backon = "0.4.1"
 figment = { workspace = true, features = ["test"] }
 rand_core = { version = "0.6", features = [ "getrandom" ] }
 tempfile.workspace = true
