--- a/crates/astria-sequencer-relayer/Dockerfile
+++ b/crates/astria-sequencer-relayer/Dockerfile
@@ -34,8 +34,11 @@ RUN cargo chef prepare --recipe-path recipe.json
 FROM chef as builder
 COPY --from=planner /build/recipe.json recipe.json
 
+RUN apt-get update \
+    && apt-get install -y \
+    librocksdb-dev
+
 ARG TARGETPLATFORM
-ENV ROCKSDB_LIB_DIR=/usr/lib
 RUN case "$TARGETPLATFORM" in \
     "linux/arm64") target="aarch64-unknown-linux-gnu" ;; \
     "linux/amd64") target="x86_64-unknown-linux-gnu" ;; \
