--- a/crates/astria-sequencer-relayer-test/kubernetes/kustomization.yml
+++ b/crates/astria-sequencer-relayer-test/kubernetes/kustomization.yml
@@ -5,11 +5,11 @@ resources:
 - deployment.yml
 - service.yml
 configMapGenerator:
-- name: metro-scripts
-  files:
-  - scripts/configure-metro.sh
-  - scripts/init-metro.sh
-  - scripts/start-metro.sh
+# - name: metro-scripts
+#   files:
+#   - scripts/configure-metro.sh
+#   - scripts/init-metro.sh
+#   - scripts/start-metro.sh
 - name: celestia-appd-scripts
   files:
   - scripts/init-celestia-appd.sh
