--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -26,9 +26,11 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tokio = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
 
+astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client" }
 astria-gossipnet = { path = "../astria-gossipnet" }
 astria-proto = { path = "../astria-proto" }
-astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client" }
+astria-sequencer-client = { path = "../astria-sequencer-client" }
+
 base64-serde = "0.7.0"
 zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
 tendermint-config.workspace = true
