--- a/crates/astria-sequencer-relayer-test/kubernetes/prepull-daemon-set.yml
+++ b/crates/astria-sequencer-relayer-test/kubernetes/prepull-daemon-set.yml
@@ -20,7 +20,7 @@ spec:
           image: "ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7"
           command: ["sh", "-c", "'true'"]
         - name: prepull-cometbft
-          image: "ghcr.io/noot99/cometbft:latest"
+          image: "ghcr.io/astriaorg/cometbft:0.0.2"
           command: ["sh", "-c", "'true'"]
         - name: prepull-dasel
           image: ghcr.io/tomwright/dasel:alpine
